examples/test/testpolicy12441.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12441
  namespace: namespace159
spec:
  podSelector:
    matchLabels:
      key29: value36
      key35: value13
      key43: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value28
          key8: value34
      podSelector:
        matchLabels:
          key18: value3
          key39: value21
          key4: value36
